openwebrx (1.2.91) bullseye jammy; urgency=low

  * Added option to record silence in background recording.
  * Made bot protection scheme optional.
  * Fixed bookmarks getting snapped to nearest step.
  * Fixed waterfall theme resetting on page reload.
  * Fixed zooming with the mouse wheel.
  * Fixed HydraSDR source selection.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 25 Aug 2025 16:12:00 +0000

openwebrx (1.2.90) bullseye jammy; urgency=low

  * Added support for the HydraSDR RFOne receiver.
  * Added back option to select initial UI theme.
  * Fixed support for 8.33kHz steps (airband).
  * Fixed clicking in the noise reduction algorithm.
  * Fixed AGC algorithm, with help from VK4DL.
  * Refactored frequency snapping code.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 11 Aug 2025 16:12:00 +0000

openwebrx (1.2.89) bullseye jammy; urgency=low

  * Automatically banning profile-scanning robots.
  * Added message about incorrect values in forms.
  * Added wrapping long ISM values.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 18 Jul 2025 16:12:00 +0000

openwebrx (1.2.88) bullseye jammy; urgency=low

  * Further improved noise reduction algorithm.
  * Added separate WMBus decoder using rtl-433.
  * Switched rtl-433 decoder to CF32 IQ format.
  * Removed AGC from the rtl-433 decoder input.
  * Removed 250kHz bandpass from the ISM mode.
  * Fixed CW skimmer window not showing up.

 -- Marat Fayzullin <luarvique@gmail.com>  Fri, 4 Jul 2025 16:12:00 +0000

openwebrx (1.2.87) bullseye jammy; urgency=low

  * Added file size display to the file browser.
  * Added configurable limit of clients per IP address.
  * Added configurable hang time to audio recording.
  * Reduced squelch hang time back, by public request.
  * Widened noise reduction control range to 20dB.
  * Improved noise reduction algorithm.
  * Improved SNR computation.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 23 Jun 2025 16:12:00 +0000

openwebrx (1.2.86) bullseye jammy; urgency=low
